Fixed unwanted overflow

--- a/src/Pages/Desktop/AppStore/AppStore.css
+++ b/src/Pages/Desktop/AppStore/AppStore.css
@@ -68,6 +68,7 @@
         flex-direction: column;
         background-color: #2F211E;
         width: 100%;
+        overflow: hidden;
     }
 
         .appStore-sideViewMobile-Holder{
@@ -75,6 +76,7 @@
                 flex-direction: column;
                 background-color: #352827;
                 width: 100%;
+                overflow: hidden;
         }
 
 
